--- a/crap.html
+++ b/crap.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cookyes</title>
-	<link rel="stylesheet" href="crap.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lemon&display=swap" rel="stylesheet">
+    <title>Registration Form</title>
+    <link rel="stylesheet" href="index.css">
 </head>
-
 <body>
-	<h1 id="header1">In the name of allah, the most gracious, the most merciful</h1>
-	<p id="p1" class="odd">I love cheeze </p>
-	<p id="p2" class="even">I love ma sis</p>
-	<p id="p3" class="odd">something in the way</p>
-	<p id="p4" class="even">smily face</p>
+    <h1>Registration Form</h1>
+    <p>Please fill out this form with the required information</p>
+    <form action="https://register-demo.freecodecamp.org" method="post">
+        <fieldset>
+            <label for="first-name">Enter Your First Name: <input id="first-name" type="text"></label>
+            <label for="last-name">Enter Your Last Name: <input id="last-name" type="text"></label>
+            <label for="email">Enter Your Email: <input id="email" type="email"></label>
+            <label for="new-password">Create a New Password: <input pattern="[a-z0-5]{8,}" id="new-password" type="password"></label>
+        </fieldset>
+        <fieldset>
+            <legend>Account type (required)</legend>
+            <label for="personal-account">
+                <input type="radio" name="account-type" id="personal-account" checked> Personal 
+            </label>
+            <label for="business-account">
+                <input type="radio" name="account-type" id="business-account"> Business 
+            </label>
+        </fieldset>
+        <fieldset>
+            <label for=""><input type="file"> Upload a profile picture: </label>
+            <label for="age">
+                Input your age (years): <input type="number" min="13" max="120" inputmode="numeric" id="age">
+            </label>
+        </fieldset>
+        <label for="terms-and-conditions">
+            <input type="checkbox" id="terms-and-conditions" required> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
+        </label>
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
