--- a/crap.html
+++ b/crap.html
@@ -3,54 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Form</title>
+    <title>Shopping</title>
     <link rel="stylesheet" href="crap.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Registration Form</h1>
-    <p>Please fill out this form with the required information</p>
-    <form action="https://register-demo.freecodecamp.org" method="post">
-        <fieldset>
-            <label for="first-name">Enter Your First Name: <input id="first-name" type="text"></label>
-            <label for="last-name">Enter Your Last Name: <input id="last-name" type="text"></label>
-            <label for="email">Enter Your Email: <input id="email" type="email"></label>
-            <label for="new-password">Create a New Password: <input pattern="[a-z0-5]{8,}" id="new-password" type="password"></label>
-        </fieldset>
-        <fieldset>
-            <legend>Account type (required)</legend>
-            <label for="personal-account">
-                <input type="radio" name="account-type" id="personal-account" checked> Personal 
-            </label>
-            <label for="business-account">
-                <input type="radio" name="account-type" id="business-account"> Business 
-            </label>
-        </fieldset>
-        <fieldset>
-            <label for=""><input type="file"> Upload a profile picture: </label>
-            <label for="age">
-                Input your age (years): <input type="number" min="13" max="120" inputmode="numeric" id="age">
-            </label>
-            <script>
-                document.getElementById('age').oninput = function() {
-                // Clear any custom validation messages previously set
-                this.setCustomValidity('');
-            };
-
-            document.getElementById('age').oninvalid = function(event) {
-                if (this.value < 13) {
-                    // Set a custom message for values below the minimum
-                    this.setCustomValidity('Kids aren\'t allowed here!');
-                } else {
-                    // This ensures that other validity checks (like the field being required) still use the default message
-                    this.setCustomValidity('');
-                }
-            };
-</script>
-        </fieldset>
-        <label for="terms-and-conditions">
-            <input type="checkbox" id="terms-and-conditions" required> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
-        </label>
-        <input type="submit" value="Submit">
-    </form>
+    <div class="container">
+        <div class="logo">
+            <img src="Cart.svg" alt="Cart" id="cart">
+        </div>
+        <div class="buttons">
+            <button class="addElement noto-sans toBlock">
+                bread
+            </button>
+            <button class="addToCart noto-sans toBlock">
+                add to cart
+            </button>
+        </div>
+    </div>
 </body>
+</html>
 </html>
